manifests/aws-monitor/qa/app.yaml
---
# Source: AWS-Monitor/templates/service.yaml
kind: Service     
apiVersion: v1     
metadata:
  name: aws-monitor-svc
spec:
  selector:
    app: aws-monitor
    
    generator: helm
    name: aws-monitor
  
  type: ClusterIP
  
  ports:         
  - name: http   
    protocol: TCP
    port: 80
    targetPort: 5001

---
# Source: AWS-Monitor/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aws-monitor-deploy
  labels:
    
    generator: helm
    name: aws-monitor
spec:
  selector: 
    matchLabels:
      app: aws-monitor
      
      generator: helm
      name: aws-monitor
  replicas: 1
  template:
    metadata:
      labels:
        app: aws-monitor
        
        generator: helm
        name: aws-monitor
    spec:
      containers:
      - name: aws-monitor
        image: sm1986/aws-monitor:1.0.3
        ports:
        - containerPort: 5001
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"

          limits:
            cpu: "400m"
            memory: "384Mi"
---
# Source: AWS-Monitor/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aws-monitor-ing
  labels:
    
    generator: helm
    name: aws-monitor
spec:
  ingressClassName: nginx
  rules:
    - http:
       paths:
        - path: /qa/
          pathType: Prefix
          backend:
            service:
              name: aws-monitor-svc
              port:
                 number: 80
